AC_INIT(configure.in)
AC_PREREQ(2.59)
AM_CONFIG_HEADER(config.h)

AC_CONFIG_MACRO_DIR(m4)
AM_INIT_AUTOMAKE(gxneur, 0.9.9)

AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_LANG_C
AM_PROG_CC_C_O
AC_PROG_MAKE_SET

AC_HEADER_STDC

PKG_PROG_PKG_CONFIG([0.20])

PKG_CHECK_MODULES(GDK, [gdk-2.0])
PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.18.0], found_gtk="yes", found_gtk="no")
if test "x$found_gtk" = "xno"; then
	PKG_CHECK_MODULES(GTK, [gtk+-2.0 < 2.18.0])
else
	AC_DEFINE(WITH_GTK, 1, [Define if you use GTK+2.0 >= 2.18.0 support])
fi

PKG_CHECK_MODULES(XNEUR, [xnconfig = 0.9.9])
PKG_CHECK_MODULES(XNEURLIB, [xneur = 0.9.9])

PKG_CHECK_MODULES(GLADE, [libglade-2.0 >= 2.6.0])
AC_SUBST(GLADE_CFLAGS)
AC_SUBST(GLADE_LIBS)

AM_GNU_GETTEXT_VERSION([0.16.1])
AM_GNU_GETTEXT([external])

DEFAULT_CFLAGS="-Wall -Wextra -Werror -g0 -fPIC -std=gnu99"
AC_SUBST(DEFAULT_CFLAGS)

AC_OUTPUT([Makefile gxneur.desktop src/Makefile pixmaps/Makefile glade/Makefile po/Makefile.in])

cat << EOF

$PACKAGE $VERSION configured successfully:

	Installing into:        $prefix

	Compiler flags:         $CFLAGS

	XNeur flags:		$XNEUR_CFLAGS
	XNeur libs:		$XNEUR_LIBS

EOF

if test "x$found_gtk" != "xno"; then
cat <<EOF
	Use GTK+2.0 >= 2.18.0 support

EOF
fi
