pixmapsdir = @datarootdir@/gxneur/pixmaps
pixmaps_DATA =			\
	am.png			\
	bg.png			\
	by.png			\
	cz.png			\
	de.png			\
	en.png			\
	es.png			\
	ee.png			\
	fr.png			\
	ge.png			\
	gr.png			\
	gxneur.png		\
	kz.png			\
	lt.png			\
	lv.png			\
	pl.png			\
	ro.png			\
	ru.png			\
	ua.png			\
	us.png			\
	uz.png

EXTRA_DIST = $(pixmaps_DATA)
