pixmapsdir = @datarootdir@/xcurf/pixmaps
pixmaps_DATA =			\
	am.png			\
	bg.png			\
	by.png			\
	cz.png			\
	de.png			\
	en.png			\
	es.png			\
	ee.png			\
	fr.png			\
	gr.png			\
	kz.png			\
	lt.png			\
	lv.png			\
	pl.png			\
	ro.png			\
	ru.png			\
	ua.png			\
	us.png			\
	uz.png

EXTRA_DIST = $(pixmaps_DATA)
