xneurrcdir = $(sysconfdir)/xneur
xneurrc_DATA =			\
	xneurrc			\
	xneurrc-be		\
	xneurrc-bg		\
	xneurrc-cs		\
	xneurrc-de		\
	xneurrc-el		\
	xneurrc-es		\
	xneurrc-et		\
	xneurrc-fr		\
	xneurrc-hy		\
	xneurrc-kk		\
	xneurrc-lt		\
	xneurrc-lv		\
	xneurrc-pl		\
	xneurrc-ro		\
	xneurrc-uk		\
	xneurrc-uz

EXTRA_DIST = $(xneurrc_DATA)
