bin_PROGRAMS = itun itunp

itun_SOURCES =			\
	data.c			\
	data.h			\
	common.c		\
	common.h		\
	connections.c		\
	connections.h		\
	packets.c		\
	packets.h		\
	params.c		\
	params.h		\
	itun.c

itunp_SOURCES =			\
	data.c			\
	data.h			\
	common.c		\
	common.h		\
	connections.c		\
	connections.h		\
	packets.c		\
	packets.h		\
	params.c		\
	params.h		\
	itunp.c
